Testing button fix on mobile

--- a/src/css/Home1.css
+++ b/src/css/Home1.css
@@ -232,12 +232,15 @@
     }
   }
 
-  @media (hover: none) and (pointer: coarse) {
-    .disable-hover button:hover {
+
+  @media (hover: none) and (pointer: coarse) { 
+    .disable-hover button:active { 
       background-color: #4a5568 !important; /* Matches bg-gray-600 */
       color: #ffffff !important; /* Matches text-white */
       border-color: #4a5568 !important; /* Matches ring-gray-600 */
     }
+  
+
 
     .buy-sell-button {
       transition: all 0.15s ease-in-out;
@@ -248,9 +251,14 @@
       color: white;
       border-color: #4a5568;
     }
+
     .buy-sell-button:hover {
       background-color: #edf2f7; /* Light Gray */
       color: #2d3748; /* Dark Gray */
     }
+  
+
+
+
   }
   
